feat: add missing pos for conversion

--- a/dictionary/generate_combined_part_of_speech.ipynb
+++ b/dictionary/generate_combined_part_of_speech.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -15,7 +15,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 16,
       "metadata": {},
       "outputs": [
         {
@@ -52,7 +52,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 17,
       "metadata": {},
       "outputs": [
         {
@@ -89,14 +89,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 18,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Combined entries: 3171\n",
+            "Combined entries: 3186\n",
             "wan\t['num']\n",
             "tu\t['num']\n",
             "rak\t['verb']\n",
@@ -118,22 +118,26 @@
         "    \"名\": \"noun\",\n",
         "    \"自\": \"verb\", \n",
         "    \"他\": \"verb\",\n",
+        "    \"複他\": \"verb\",\n",
         "    \"完\": \"verb\",\n",
         "    \"助動\": \"auxverb\",\n",
         "    \"副\": \"adv\",\n",
         "    \"後副\": \"postpadv\",\n",
         "    \"連体\": \"adnom\",\n",
         "    \"間投\": \"interj\",\n",
-        "    \"形名\": \"pronoun\",\n",
+        "    \"形名\": \"nmlz\",\n",
         "    \"代名\": \"pronoun\",\n",
         "    \"位名\": \"noun\",\n",
         "    \"格助\": \"parti\",\n",
         "    \"副助\": \"parti\",\n",
         "    \"終助\": \"parti\",\n",
         "    \"接助\": \"parti\",\n",
-        "    \"人接\": \"prefix\",\n",
+        "    \"人接\": \"pers\",\n",
         "    \"接頭\": \"prefix\",\n",
-        "    \"接尾\": \"suffix\"\n",
+        "    \"接尾\": \"suffix\",\n",
+        "    \"位名＋格助\": \"colloc\",\n",
+        "    \"名＋格助\": \"colloc\",\n",
+        "    \"動\": \"verb\"\n",
         "}\n",
         "\n",
         "# Combine POS data\n",
@@ -147,10 +151,16 @@
         "for entry in ff_saru_terms:\n",
         "    if entry[\"kana\"] in combined_pos and combined_pos[entry[\"kana\"]]:\n",
         "        continue\n",
-        "        \n",
-        "    mapped_pos = POS_MAP.get(entry[\"pos\"])\n",
-        "    if mapped_pos:\n",
-        "        combined_pos[entry[\"kana\"]] = [mapped_pos]\n",
+        "\n",
+        "    mapped_poses = []\n",
+        "    for pos in entry[\"pos\"].split(\"／\"):\n",
+        "        mapped_pos = POS_MAP.get(pos)\n",
+        "        if mapped_pos:\n",
+        "            mapped_poses.append(mapped_pos)\n",
+        "        else:\n",
+        "            print(f\"No mapping found for {entry['kana']} with POS {entry['pos']}\")\n",
+        "\n",
+        "    combined_pos[entry[\"kana\"]] = mapped_poses\n",
         "\n",
         "print(\"Combined entries:\", len(combined_pos))\n",
         "for i, (lemma, pos) in enumerate(combined_pos.items()):\n",
@@ -161,7 +171,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 19,
       "metadata": {},
       "outputs": [],
       "source": [
