feat: update morpheme_coverage

--- a/corpus/analysis/morpheme_coverage.ipynb
+++ b/corpus/analysis/morpheme_coverage.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,179 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Coverage:  86.59038646176063\n"
+     ]
+    }
+   ],
+   "source": [
+    "# covered words * freq / total words * 100\n",
+    "print(\"Coverage: \", sum(freq_map[w] for w in covered) / sum(freq_map[w] for w in words) * 100)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Cumulative coverage\n",
+    "# cumulative_coverage = 0\n",
+    "# for w in sorted(freq_map, key=freq_map.get, reverse=True):\n",
+    "#     cumulative_coverage += freq_map[w]\n",
+    "#     print(f\"{w}: {cumulative_coverage / sum(freq_map.values()) * 100:.2f}%\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Coverage Statistics:\n",
+      "Total unique words: 34086\n",
+      "Covered words: 8085 (23.7%)\n",
+      "Total tokens: 1146737\n",
+      "Covered tokens: 992964 (86.6%)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pathlib import Path\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "def create_coverage_visualizations(\n",
+    "    freq_map, covered, uncovered, output_dir=\"output/figures\"\n",
+    "):\n",
+    "    # Create output directory if it doesn't exist\n",
+    "    Path(output_dir).mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "    # 1. Frequency Distribution Plot\n",
+    "    plt.figure(figsize=(12, 6))\n",
+    "    # Convert frequencies to DataFrame\n",
+    "    frequencies_df = pd.DataFrame({\"frequency\": list(freq_map.values())})\n",
+    "    frequencies_df[\"log_frequency\"] = np.log10(frequencies_df[\"frequency\"])\n",
+    "\n",
+    "    sns.histplot(data=frequencies_df, x=\"log_frequency\", bins=50)\n",
+    "    plt.title(\"Word Frequency Distribution (Log Scale)\")\n",
+    "    plt.xlabel(\"Log10(Frequency)\")\n",
+    "    plt.ylabel(\"Count\")\n",
+    "    plt.savefig(\n",
+    "        f\"{output_dir}/frequency_distribution.png\", dpi=300, bbox_inches=\"tight\"\n",
+    "    )\n",
+    "    plt.close()\n",
+    "\n",
+    "    # 2. Coverage vs Frequency Threshold\n",
+    "    thresholds = range(1, 21)\n",
+    "    coverage_data = []\n",
+    "    for threshold in thresholds:\n",
+    "        words_above_threshold = {w: f for w, f in freq_map.items() if f >= threshold}\n",
+    "        total_tokens = sum(words_above_threshold.values())\n",
+    "        covered_tokens = sum(words_above_threshold.get(w, 0) for w in covered)\n",
+    "        coverage_rate = (covered_tokens / total_tokens) * 100 if total_tokens > 0 else 0\n",
+    "        coverage_data.append({\"threshold\": threshold, \"coverage_rate\": coverage_rate})\n",
+    "\n",
+    "    coverage_df = pd.DataFrame(coverage_data)\n",
+    "    plt.figure(figsize=(12, 6))\n",
+    "    sns.lineplot(data=coverage_df, x=\"threshold\", y=\"coverage_rate\", marker=\"o\")\n",
+    "    plt.title(\"Coverage Rate vs Frequency Threshold\")\n",
+    "    plt.xlabel(\"Minimum Frequency Threshold\")\n",
+    "    plt.ylabel(\"Coverage Rate (%)\")\n",
+    "    plt.grid(True)\n",
+    "    plt.savefig(f\"{output_dir}/coverage_by_threshold.png\", dpi=300, bbox_inches=\"tight\")\n",
+    "    plt.close()\n",
+    "\n",
+    "    # 3. Top Uncovered Words\n",
+    "    plt.figure(figsize=(15, 8))\n",
+    "    uncovered_freq = {w: freq_map[w] for w in uncovered}\n",
+    "    top_uncovered = dict(\n",
+    "        sorted(uncovered_freq.items(), key=lambda x: x[1], reverse=True)[:20]\n",
+    "    )\n",
+    "\n",
+    "    top_uncovered_df = pd.DataFrame(\n",
+    "        {\"word\": list(top_uncovered.keys()), \"frequency\": list(top_uncovered.values())}\n",
+    "    )\n",
+    "\n",
+    "    sns.barplot(data=top_uncovered_df, x=\"word\", y=\"frequency\")\n",
+    "    plt.xticks(rotation=45, ha=\"right\")\n",
+    "    plt.title(\"Top 20 Most Frequent Uncovered Words\")\n",
+    "    plt.xlabel(\"Word\")\n",
+    "    plt.ylabel(\"Frequency\")\n",
+    "    plt.tight_layout()\n",
+    "    plt.savefig(f\"{output_dir}/top_uncovered_words.png\", dpi=300, bbox_inches=\"tight\")\n",
+    "    plt.close()\n",
+    "\n",
+    "    # 4. Coverage Summary\n",
+    "    fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(15, 6))\n",
+    "\n",
+    "    # Types (unique words) coverage\n",
+    "    types_data = pd.DataFrame(\n",
+    "        {\"category\": [\"Covered\", \"Uncovered\"], \"count\": [len(covered), len(uncovered)]}\n",
+    "    )\n",
+    "\n",
+    "    # Tokens (total occurrences) coverage\n",
+    "    tokens_covered = sum(freq_map[w] for w in covered)\n",
+    "    tokens_uncovered = sum(freq_map[w] for w in uncovered)\n",
+    "    tokens_data = pd.DataFrame(\n",
+    "        {\n",
+    "            \"category\": [\"Covered\", \"Uncovered\"],\n",
+    "            \"count\": [tokens_covered, tokens_uncovered],\n",
+    "        }\n",
+    "    )\n",
+    "\n",
+    "    # Plot pie charts\n",
+    "    ax1.pie(types_data[\"count\"], labels=types_data[\"category\"], autopct=\"%1.1f%%\")\n",
+    "    ax1.set_title(\"Coverage by Types (Unique Words)\")\n",
+    "\n",
+    "    ax2.pie(tokens_data[\"count\"], labels=tokens_data[\"category\"], autopct=\"%1.1f%%\")\n",
+    "    ax2.set_title(\"Coverage by Tokens (Total Occurrences)\")\n",
+    "\n",
+    "    plt.savefig(f\"{output_dir}/coverage_summary.png\", dpi=300, bbox_inches=\"tight\")\n",
+    "    plt.close()\n",
+    "\n",
+    "    # Print summary statistics\n",
+    "    print(\"Coverage Statistics:\")\n",
+    "    print(f\"Total unique words: {len(freq_map)}\")\n",
+    "    print(f\"Covered words: {len(covered)} ({len(covered)/len(freq_map)*100:.1f}%)\")\n",
+    "    print(f\"Total tokens: {sum(freq_map.values())}\")\n",
+    "    print(\n",
+    "        f\"Covered tokens: {tokens_covered} ({tokens_covered/sum(freq_map.values())*100:.1f}%)\"\n",
+    "    )\n",
+    "\n",
+    "    # Create detailed CSV report\n",
+    "    df = pd.DataFrame(\n",
+    "        {\n",
+    "            \"word\": list(freq_map.keys()),\n",
+    "            \"frequency\": list(freq_map.values()),\n",
+    "            \"is_covered\": [w in covered for w in freq_map.keys()],\n",
+    "        }\n",
+    "    )\n",
+    "    df.sort_values(\"frequency\", ascending=False).to_csv(\n",
+    "        f\"{output_dir}/word_coverage_report.csv\",\n",
+    "        sep=\"\\t\",\n",
+    "        index=False,\n",
+    "        encoding=\"utf-8\",\n",
+    "    )\n",
+    "\n",
+    "create_coverage_visualizations(freq_map, covered, uncovered, output_dir=\"output/figures\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -12124,6 +12296,70 @@
    "source": [
     "for word in sorted(uncovered_words_with_freq, key=lambda x: freq_map[x], reverse=True):\n",
     "    print(f\"{word}\", freq_map[word])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_cumulative_coverage_plot(freq_map, covered, output_dir=\"output/figures\"):\n",
+    "    # Sort words by frequency\n",
+    "    sorted_words = sorted(freq_map.items(), key=lambda x: x[1], reverse=True)\n",
+    "    total_tokens = sum(freq_map.values())\n",
+    "\n",
+    "    # Calculate cumulative coverage\n",
+    "    cumulative_data = []\n",
+    "    cumulative_tokens = 0\n",
+    "    covered_tokens = 0\n",
+    "\n",
+    "    for rank, (word, freq) in enumerate(sorted_words, 1):\n",
+    "        cumulative_tokens += freq\n",
+    "        if word in covered:\n",
+    "            covered_tokens += freq\n",
+    "\n",
+    "        cumulative_data.append(\n",
+    "            {\n",
+    "                \"rank\": rank,\n",
+    "                \"cumulative_coverage\": covered_tokens / total_tokens * 100,\n",
+    "                \"total_coverage\": cumulative_tokens / total_tokens * 100,\n",
+    "            }\n",
+    "        )\n",
+    "\n",
+    "    # Create DataFrame\n",
+    "    df = pd.DataFrame(cumulative_data)\n",
+    "\n",
+    "    # Create plot\n",
+    "    plt.figure(figsize=(12, 6))\n",
+    "\n",
+    "    # Plot cumulative coverage\n",
+    "    sns.lineplot(\n",
+    "        data=df, x=\"rank\", y=\"cumulative_coverage\", label=\"Covered Words\", color=\"blue\"\n",
+    "    )\n",
+    "\n",
+    "    # Plot total possible coverage as dotted red line\n",
+    "    sns.lineplot(\n",
+    "        data=df,\n",
+    "        x=\"rank\",\n",
+    "        y=\"total_coverage\",\n",
+    "        label=\"Total Words\",\n",
+    "        color=\"red\",\n",
+    "        linestyle=\"--\",\n",
+    "    )\n",
+    "\n",
+    "    plt.xscale(\"log\")  # Use log scale for rank\n",
+    "    plt.grid(True, which=\"both\", ls=\"-\", alpha=0.2)\n",
+    "    plt.title(\"Cumulative Word Coverage by Rank\")\n",
+    "    plt.xlabel(\"Word Rank (log scale)\")\n",
+    "    plt.ylabel(\"Coverage (%)\")\n",
+    "    plt.legend()\n",
+    "\n",
+    "    plt.tight_layout()\n",
+    "    plt.savefig(f\"{output_dir}/cumulative_coverage.png\", dpi=300, bbox_inches=\"tight\")\n",
+    "    plt.close()\n",
+    "\n",
+    "create_cumulative_coverage_plot(freq_map, covered, output_dir=\"output/figures\")"
    ]
   }
  ],
