feat: update combined gloss generation

--- a/dictionary/generate_combined_glosses.ipynb
+++ b/dictionary/generate_combined_glosses.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -45,13 +45,13 @@
       "    アイヌフラ\taynuhura\t人間のにおい\n",
       "    アイネ\tayne\t～したあげく\n",
       "Tamura: 2104\n",
-      "    -a\t['sfx']\t['の尾']\n",
-      "    -aha\t['sfx']\t[]\n",
-      "    -ar\t['sfx']\t['をつくる', 'を人につくってもらう']\n",
-      "    -asnu\t['sfx']\t[]\n",
-      "    -atki\t['sfx']\t[]\n",
-      "    -ci\t['sfx']\t['時']\n",
-      "    -e\t['sfx']\t['に', 'させる', 'を見る', 'に', 'を見せる', '見させる']\n"
+      "    -a\t['sfx']\t['ア', 'の尾']\n",
+      "    -aha\t['sfx']\t['アハ']\n",
+      "    -ar\t['sfx']\t['アㇻ  kar カㇻ', 'をつくる', 'を人につくってもらう']\n",
+      "    -asnu\t['sfx']\t['アㇱヌ']\n",
+      "    -atki\t['sfx']\t['アッキ']\n",
+      "    -ci\t['sfx']\t['チ', '時']\n",
+      "    -e\t['sfx']\t['エ', 'を曲げる']\n"
      ]
     }
    ],
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
