--- a/corpus/generate_conllu_format.ipynb
+++ b/corpus/generate_conllu_format.ipynb
@@ -2,17 +2,73 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'VERB'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "UPOS_XPOS_MAP = {\n",
+    "    \"VERB\": [\"vi\", \"vd\", \"vc\", \"v\", \"verb\"],\n",
+    "    \"NOUN\": [\"n\", \"nl\", \"nmlz\", \"noun\"],\n",
+    "    \"PRON\": [\"pron\", \"int\"],\n",
+    "    \"PROPN\": [\"propn\"],\n",
+    "    \"DET\": [\"adn\", \"determiner\"],\n",
+    "    \"ADV\": [\"adv\"],\n",
+    "    \"CCONJ\": [\"cconj\"],\n",
+    "    \"SCONJ\": [\"cconj\", \"sconj\", \"padv\"],\n",
+    "    \"POST\": [\"post\"],\n",
+    "    \"AUX\": [\"auxv\", \"cop\"],\n",
+    "    \"PART\": [\"sfp\", \"pers\"],\n",
+    "    \"INTJ\": [\"intj\"],\n",
+    "    \"ADP\": [\"advp\", \"postp\", \"parti\"],\n",
+    "    \"NUM\": [\"num\"],\n",
+    "    \"PUNCT\": [\"punct\"],\n",
+    "}\n",
+    "\n",
+    "\n",
+    "def generate_upos_from_xpos(xpos: str) -> str:\n",
+    "    \"\"\"Generate UPOS from XPOS using the reverse mapping.\"\"\"\n",
+    "    reverse_map = {x: upos for upos, xposes in UPOS_XPOS_MAP.items() for x in xposes}\n",
+    "    return reverse_map.get(xpos, \"_\")\n",
+    "\n",
+    "generate_upos_from_xpos(\"vi\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "433a8b2f86c843e180e90d364f3bff10",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/53 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import pickle\n",
     "from typing import List, Dict\n",
     "from pathlib import Path\n",
-    "\n",
-    "UPOS_XPOS_MAP = {\n",
-    "    \"noun\": \"n\",\n",
-    "}\n",
+    "from tqdm.notebook import tqdm\n",
     "\n",
     "def create_conllu_entry(\n",
     "    token_id: int, form: str, pos_tags: List[str], glosses: List[str]\n",
@@ -21,7 +77,7 @@
     "    # Fields: ID FORM LEMMA UPOS XPOS FEATS HEAD DEPREL DEPS MISC\n",
     "\n",
     "    # Use first POS tag as UPOS if available, otherwise '_'\n",
-    "    upos = pos_tags[0] if pos_tags else \"_\"\n",
+    "    upos = generate_upos_from_xpos(pos_tags[0]) if pos_tags else \"_\"\n",
     "\n",
     "    # Join all POS tags for XPOS\n",
     "    xpos = \"|\".join(pos_tags) if pos_tags else \"_\"\n",
@@ -29,8 +85,9 @@
     "    # Join glosses for MISC field\n",
     "    misc = \"Gloss=\" + \"|\".join(glosses) if glosses else \"_\"\n",
     "\n",
+    "    lemma = form # TODO:\n",
     "    # Use '_' for fields we don't have information for\n",
-    "    return f\"{token_id}\\t{form}\\t_\\t{upos}\\t{xpos}\\t_\\t_\\t_\\t_\\t{misc}\"\n",
+    "    return f\"{token_id}\\t{form}\\t{lemma}\\t{upos}\\t{xpos}\\t_\\t_\\t_\\t_\\t{misc}\"\n",
     "\n",
     "\n",
     "def sentence_to_conllu(sentence: Dict) -> str:\n",
@@ -58,7 +115,7 @@
     "output_dir.mkdir(parents=True, exist_ok=True)\n",
     "\n",
     "# Process each book\n",
-    "for book_title, sentences in sentences_by_book.items():\n",
+    "for book_title, sentences in tqdm(list(sentences_by_book.items())):\n",
     "    # Create sanitized filename\n",
     "    filename = \"\".join(c for c in book_title if c.isalnum() or c in (\" \", \"-\"))\n",
     "    filename = filename.replace(\" \", \"_\") + \".conllu\"\n",
@@ -68,7 +125,8 @@
     "        for sentence in sentences:\n",
     "            f.write(sentence_to_conllu(sentence))\n",
     "            f.write(\"\\n\")  # Add blank line between sentences\n",
-    "\n"
+    "\n",
+    "    # break"
    ]
   }
  ],
