feat: merge extraxct_words into create_tokenized_corpus

--- a/corpus/create_tokenized_corpus.ipynb
+++ b/corpus/create_tokenized_corpus.ipynb
@@ -277,6 +277,95 @@
     "with open(\"output/annotated_translated_tokenized_corpus_by_book.pkl\", \"wb\") as f:\n",
     "    pickle.dump(sentences_by_book, f)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Extract words"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "\n",
+    "from utils.corpus import RawSentence\n",
+    "\n",
+    "with open(\"output/annotated_translated_tokenized_corpus_by_book.pkl\", \"rb\") as file:\n",
+    "    corpus: dict[str, list[RawSentence]] = pickle.load(file)\n",
+    "\n",
+    "combined_words = [\n",
+    "    word\n",
+    "    for _, sentences in corpus.items()\n",
+    "    for sentence in sentences\n",
+    "    for word in sentence[\"words\"]\n",
+    "]\n",
+    "\n",
+    "SAKHALIN_BOOKS = {\n",
+    "    \"からふとのアイヌご（入門）\",\n",
+    "    \"カラフトのアイヌ語（中級）\",\n",
+    "    \"カラフトのアイヌ語（初級）\",\n",
+    "    \"ニューエクスプレス・スペシャル 日本語の隣人たち I+II\",\n",
+    "    \"ピウスツキ記念碑\",\n",
+    "    \"千徳太郎治のピウスツキ宛書簡\",\n",
+    "    \"浅井タケ昔話全集I,II\",\n",
+    "    \"アイヌ語・アイヌ文化研究の課題\",\n",
+    "}\n",
+    "\n",
+    "MODERN_WORDS = {\"アイヌタイムズ\", \"プラハ宣言\", \"ウポポイ館内展示\", \"萱野茂の国会演説\"}\n",
+    "\n",
+    "combined_words_hokkaido_traditional = [\n",
+    "    word\n",
+    "    for book, sentences in corpus.items()\n",
+    "    for sentence in sentences\n",
+    "    for word in sentence[\"words\"]\n",
+    "    if book not in SAKHALIN_BOOKS and book not in MODERN_WORDS\n",
+    "]\n",
+    "\n",
+    "for book, sentences in corpus.items():\n",
+    "    flattened_words = [word for sentence in sentences for word in sentence[\"words\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import Counter\n",
+    "\n",
+    "word_counts = Counter(combined_words)\n",
+    "\n",
+    "with open(\"output/ainu_words_all.tsv\", \"w\") as f:\n",
+    "    for word, count in word_counts.most_common():\n",
+    "        f.write(f\"{word}\\t{count}\\n\")\n",
+    "with open(\"output/ainu_words_hokkaido_traditional.tsv\", \"w\") as f:\n",
+    "    for word, count in word_counts.most_common():\n",
+    "        f.write(f\"{word}\\t{count}\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "\n",
+    "WORDS_BY_BOOK_DIR = Path(\"output\") / \"words_by_book\"\n",
+    "WORDS_BY_BOOK_DIR.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "for book, sentences in corpus.items():\n",
+    "    flattened_words = [word for sentence in sentences for word in sentence[\"words\"]]\n",
+    "    word_counts = Counter(flattened_words)\n",
+    "    with open(WORDS_BY_BOOK_DIR / f\"{book}.tsv\", \"w\") as f:\n",
+    "        for word, count in word_counts.most_common():\n",
+    "            f.write(f\"{word}\\t{count}\\n\")"
+   ]
   }
  ],
  "metadata": {
