feat: add manual_gloss to combined_glosses

--- a/dictionary/generate_combined_glosses.ipynb
+++ b/dictionary/generate_combined_glosses.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
     "\n",
-    "OUTPUT_DIR = Path(\"output\")"
+    "OUTPUT_DIR = Path(\"output\")\n",
+    "INPUT_DIR = Path(\"input\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +52,10 @@
       "    -asnu\t['sfx']\t['アㇱヌ']\n",
       "    -atki\t['sfx']\t['アッキ']\n",
       "    -ci\t['sfx']\t['チ', '時']\n",
-      "    -e\t['sfx']\t['エ', 'を曲げる']\n"
+      "    -e\t['sfx']\t['エ', 'を曲げる']\n",
+      "Manual: 2\n",
+      "    k=\t['私が']\n",
+      "    c=\t['私達が']\n"
      ]
     }
    ],
@@ -119,6 +123,17 @@
     "    if i > 5:\n",
     "        break\n",
     "\n",
+    "\n",
+    "with open(INPUT_DIR / \"manual_gloss.json\", \"r\") as f:\n",
+    "    manual_glosses = {k: v[\"glosses\"] for k, v in json.load(f).items()}\n",
+    "\n",
+    "print(\"Manual:\", len(manual_glosses))\n",
+    "\n",
+    "for i, (lemma, gloss) in enumerate(manual_glosses.items()):\n",
+    "    print(f\"    {lemma}\\t{gloss}\")\n",
+    "    if i > 5:\n",
+    "        break\n",
+    "\n",
     "# with open(OUTPUT_DIR / \"wiktionary_ainu_word_compositions.json\", \"r\") as f:\n",
     "#     wiktionary_morphemes = json.load(f)\n",
     "\n",
@@ -150,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -198,11 +213,18 @@
     "        continue\n",
     "    combined_glosses[entry[\"lemma\"]] = entry[\"glosses\"]\n",
     "\n",
+    "for entry in manual_glosses:\n",
+    "    if entry in combined_glosses and combined_glosses[entry]:\n",
+    "        continue\n",
+    "    combined_glosses[entry] = manual_glosses[entry]\n",
+    "\n",
+    "\n",
     "print(len(combined_glosses))\n",
     "for i, (lemma, gloss) in enumerate(combined_glosses.items()):\n",
     "    print(f\"{lemma}\\t{gloss}\")\n",
     "    if i > 10:\n",
     "        break\n",
+    "\n",
     "\n",
     "with open(OUTPUT_DIR / \"combined_glosses.json\", \"w\") as f:\n",
     "    json.dump(combined_glosses, f, ensure_ascii=False)"
