feat: add manual_gloss to combined_pos

--- a/dictionary/generate_combined_part_of_speech.ipynb
+++ b/dictionary/generate_combined_part_of_speech.ipynb
@@ -1,8 +1,15 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Generate combined part of speech data"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -10,12 +17,27 @@
         "import json\n",
         "from typing import TypedDict\n",
         "\n",
-        "OUTPUT_DIR = Path(\"output\")"
+        "OUTPUT_DIR = Path(\"output\")\n",
+        "INPUT_DIR = Path(\"input\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Load data"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Load Wiktionary POS data"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [
         {
@@ -51,8 +73,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Load FF Ainu POS data"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [
         {
@@ -88,8 +117,48 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Load manual POS data"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 7,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Manual: 2\n",
+            "k=\t['pers']\n",
+            "c=\t['pers']\n"
+          ]
+        }
+      ],
+      "source": [
+        "with open(INPUT_DIR / \"manual_gloss.json\", \"r\") as f:\n",
+        "    manual_glosses = {k: v[\"poses\"] for k, v in json.load(f).items()}\n",
+        "\n",
+        "print(\"Manual:\", len(manual_glosses))\n",
+        "for i, (lemma, pos) in enumerate(manual_glosses.items()):\n",
+        "    print(f\"{lemma}\\t{pos}\")\n",
+        "    if i > 10:\n",
+        "        break"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Combine POS data"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 8,
       "metadata": {},
       "outputs": [
         {
@@ -171,7 +240,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [],
       "source": [
